--- a/website-hakyll.cabal
+++ b/website-hakyll.cabal
@@ -15,10 +15,15 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 executable website-hakyll
-  main-is:             site.hs
+  main-is:             Site.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
-                       hakyll
+                       text,
+                       hakyll,
+                       parsec,
+                       pandoc,
+                       pandoc-types,
+                       bibtex
   ghc-options:         -Wall
                        -Wcompat
                        -Widentities
