--- a/website-hakyll.cabal
+++ b/website-hakyll.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 
 executable website-hakyll
   main-is:             Site.hs
+  other-modules:       Bib
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
                        text,
